Fix tile image widths on mobile view (1 col)

--- a/src/main/webapp/css/elements.css
+++ b/src/main/webapp/css/elements.css
@@ -243,6 +243,10 @@
     opacity: 1;
 }
 
+.elements-category-tiles .tile img {
+    width: 100%;
+}
+
 .elements-category-tiles .tile-details {
     text-align: center;
     background-color: #eaeaea;
